--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Y6K9ojfx,iv:53hmCy1E8fnEJQlJk29C0vDP/NqHwZXj/kaIsg/zIqQ=,tag:5MUUd+YIBzs/hJUh4tiPgg==,type:str]
-ansible_user: ENC[AES256_GCM,data:ikxuD510,iv:5Pbd4NcPI/GMFTr12Xq37a/x1uwm0kwM07G+ZTWT+JI=,tag:RU7VYwOj8KF2D6PYjbA4QQ==,type:str]
+kind: ENC[AES256_GCM,data:hr2uHLEO,iv:xF8TWq8NHX8XmZM63YUDdMlv6lYQ0vxW9zA0OVUQt6E=,tag:T0XIVmZsPbH/Q1HA3yBTqg==,type:str]
+ansible_user: ENC[AES256_GCM,data:VwfOrhtP,iv:+vlOsmA3UCEHy8vI+YgPVLX5IMcaxkWE+cbbBph0pnA=,tag:8RniHfnuNGFDtY58uxyuMA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBydVdRTFU2UE9qVk16ZFE5
-            bVljY1o4Y21oM3VnTDVONk1hNERTdGhGakZVCmlTelRZanZMd0tHNjU0enNhQkQ3
-            cXVReTNsL20vZngzNGtxb1duTnc5SXMKLS0tIEswMEVWWHFJV2RoU2Q0M2IzUktq
-            ZTk5emlXU3lzbzAyL3FLTHFqSDhsUHMKqJDrZf6LIQmw/hSBt7OFAdWySkfbWH7U
-            e0LJojhIn0XXp9bDTZ4TapxD+jRB5rLu3ZIoB25yQJIgLUXFFcuX9w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2ZDdxcllQVDMrRjV3NHg0
+            elM4VDZyZXBJSEpzdEJEcnI1N0ZZLzJOYWxjCi9QWGdubmFUT2t0NldBSE12ZmJj
+            OWdkTnREdFE1cU5JL2tjdXBnT3hHZ2MKLS0tIFlGbkxSQU8wOXBhc0NjeDBYdkFy
+            c2FQeFQ5a0tmeXRwQ0tuRUxzZHhqeWcKwNSwZO+rPRycs2XciQtXvpBKE+x5uAGk
+            W3jXUIGI6feY5l/NY6dXpnzbW11jFiARSQ4tjLymcJaKvPkHkwOQtg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T00:49:47Z"
-    mac: ENC[AES256_GCM,data:8jfuSWWjsEF45PbYgfMw63g7sYsoqyIzMY2bCQn1s/V98kOU/EXD2pf3rYqY2cvjZI7wgCMSpaMg+2Lf29z4a4z9DArTIH5YmlddgHEyrSRwYb/HmFLDYjx3idk1it1qklCGRdV4xYFGk3qoUmI/9f1Mms0KSSrleoJlcK/uzkw=,iv:7+9tZLMQW/Evci7jhgcDisKka4x0TWYuBdQDHTNfDGM=,tag:NWuq/RdCcnK5VXQDWWvSpg==,type:str]
+    lastmodified: "2023-02-17T03:29:43Z"
+    mac: ENC[AES256_GCM,data:xHNuOy7XFBKmsZzlkuXWDBZOHSM0iCD/PpNUGQvIFWAk5KSjepJYUdRt+Gkn7bs1gI7MSEzjuRXtTGE/RMypA8SvnXbW1CLKhIEWrb0wYqE8pE09yD4sesmHWdyX0/WH0EexP1Dx5znKZgGwyACs8CNE2F+xE3yGv8yz9bovbbw=,iv:qEsXZAXJXtO45p9rIZCevJKs3k6yuviEQb2CQv8xK7k=,tag:b8LJeXOovFaCIT4Bb303ag==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
