--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ySENG78W,iv:4DFvzCfLgWMuTvwCc08mWPArpwaf06WLsjK3SvgKuVU=,tag:Mgq1j+Hcsu0EyAvQ0miq7A==,type:str]
-ansible_user: ENC[AES256_GCM,data:oziXDKaX,iv:m0WnEMob3AyzWh/kRPieiLfg35w8rarz1ECzV3Re3RE=,tag:yGr5XbLB2z/+Mx0PbF3WFw==,type:str]
+kind: ENC[AES256_GCM,data:DP2OsbdQ,iv:ZNTDWcdHZK1QDZCJ52dOLoovD8Ha/enfNjNSA0KnxZU=,tag:Z5sGOzuIYmLvbIvSJUIfRQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:Ls+2+REz,iv:i51CssK2RIcfhRZjOhTedEf3mlbhX7habFtkFxuzPrU=,tag:HHHEE/EvmzBWULIhITB4pw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSZVBJMWd3cFVVaTRhMHhi
-            Z2MwdmllQVlMQ3FFS1BwenIzZCtodGFIcGlNCjJVUzdaTS9sTy9nM1YwMVBydXIr
-            M3JXTnFaLzEyaDlPVlc3MnFOS21BNkkKLS0tIHVHbXVUT1lZQVFaNDBEWXJGNzRF
-            QjNXR1VIR3Qxell5NWdLcHN6ZURnNk0KGYu/gLOQGf6M+WJRU1W7RiyZbwcN0qAt
-            WrDWNPg7czheNzH8+VdoWs2MGEeQX0p1O4Ow5ZjX/hzATNGqC3MrkQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxQ2h2QWtTR1FxQnZaY2lF
+            bFlERk1hSEVuUlhad0ozeXpTSWxNbEZQejJvCm0wVGhiRG51c2lBaHhRSHhNS2ZY
+            emw0NDljYVpRR0E2YWhQU2ExMkFTSUEKLS0tIDhLVUtKcXdVMWF2WkZUVjJLWFhQ
+            STJTZWx1bjVBNXNzNEkvRG9uNXZES0EK6mwb0VciI37O4FT2Ksh9oDe7RNCpprbC
+            +LdQcZeNmUtQGkzq94JM+fGbMDyExr2dNgB+yyxdc2MHEsxqu+vEIg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T00:49:47Z"
-    mac: ENC[AES256_GCM,data:+xu95p9VCmR+/OVfPsZmV4EcK4b63uXD+bisbuKqztFOSk2OtI55vEj4SXD6azK45CDqp0narseBXiWV6+GTzgF823VoJykjoxBAs2zm792XoP6MzYfqypkKMh7EWau/WhTupp2Msl7BJrWWE8FtZYHVfX8tpr6gvLfOnw4JFbI=,iv:db95/5F41OxZhI96oJSzmbj+pr3TR09q+V0Q34ndE9Q=,tag:L2nhH69uX/SK1ApiIo4cAA==,type:str]
+    lastmodified: "2023-02-17T03:29:43Z"
+    mac: ENC[AES256_GCM,data:W9oidKI/EGwQL8I2x6BlcsKSpPyFNM8ntjxZMqRHN9j/srUKwKhNhx0cTQnzVAPUbzekZJLdCdWQGl+i/kFE3shxxLd2P/BzJs7ahbn5lJngTllBt0f5iv3dQDtFGcoDu4cgcfLn1RamoIItVml2a3EaNfNJUv0FWh24XVL3pAU=,iv:wzBKhyV80/Z5U+2jFl34Q9qL28M+krD9/c3PTu934IE=,tag:7DQaQBt8Un1TB3AtbBMPog==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
