--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:gN/hlGdl,iv:frDsF46BQzPNfBVygfI8S4FiTTWrOvmPCRJzGgPwBWQ=,tag:GB0FLQMF+YTxz0ZKyGSo2A==,type:str]
-ansible_user: ENC[AES256_GCM,data:pWBXPCIr,iv:7VssM5P7QpMX9nDbbXPmMM4FbbQ23H3yuDXmXx78RWU=,tag:EpTidDUTJEFsez9/5ynGYQ==,type:str]
+kind: ENC[AES256_GCM,data:f1Gmk1g/,iv:lTvJgrSsbZhVI0Qoei1BCEuk2H78UpBtJ6jsy9bs3bk=,tag:/iz4NB9MTeVSVt01qfjF8g==,type:str]
+ansible_user: ENC[AES256_GCM,data:Kl3+VCBE,iv:f3rhSGHAef+NagltoqBsZjWd5JZiAoS+aBkLySzsBQM=,tag:aSvtfmxy05XYTaRH9HYZAg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxSFlVaHA0VTdCbHU2OXpr
-            Y1A5a0pZZnJ3MCt3aytiLzlXUWxkWEpGeVVzCm5oUWxtdEMxVm5TSDc2UDk1V0F6
-            VkZ3NDRhVGRuMGVEUzQzRkJXdG1CK28KLS0tIGJCUnh5ODk5RnVGYTJMVUNXalpM
-            Zk1qWng0bVdnME1hNTNzTlFVTXNDUlUKv3epNZgCOSGtJgJdJYPjSuu0FraxyI2V
-            v93wkeHc7DrKS2gtFESIO24wZUj174y84j02mOtANaneyQSkjntheA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvWmFOQXdEekt6R2lSRk1K
+            d0Vkdjc0VWNaN0J1dDBISVlUKy9DOXRqc0FZCjltYXFqY2kwRlJIU09uKzNlWGd0
+            UVY3YkpGZzhxK0N6NjNIWHpaNkdkdkkKLS0tIHJrNDh4ajVxbVVZaDZFYjJ0RXVU
+            ZE1uT3YybGd0eXp5RFZ5cFU3Q2FBRE0Kik5JzI3xVgEXzQ8Onm6N56pe8f86cEUb
+            FOZhDRalVcEjQq7WpnmDgwVFSMFXS2kNw+hzYb7Xu0msUOWVsseelA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T00:49:47Z"
-    mac: ENC[AES256_GCM,data:VrKMLGD+icUJV+ZbGAv6XYpku8GDac/nw+u48XpEKM6gLdQn8f//9nkHFvpJlZu2n426n3D4JbGTYz4zJXVWG1Lhj8v5NJqDYsIPMNfEYmqJ4IoBk3P8ERFb/Bc4mEoSd/f56G4d67BrsgmlCwzLugLoZn5L0uq8tUEUxL55Wkc=,iv:Evq6DhR1u6+zshCqzzraxnSlcd/Ue1oxjQa2mM9PKrY=,tag:LVyPEgc2rra45ZTu+LXFtw==,type:str]
+    lastmodified: "2023-02-17T03:29:43Z"
+    mac: ENC[AES256_GCM,data:wG4KsUR82c+xPCCJ64r/IJ/ZGJyYxakNCRhp34KKjnGsMNCwglGybIC538Xswkbzq0qeQK2JmyFbKJ0q9CDik1Almcct246k5ISTjX9npeoDnj6KeaUJnZZ9BZ76tevOFmuSj4KVKbqFRLd7WYDBFFmav/4Eh29TiBWju09zaD4=,iv:qoRhgs3EKLHRQpgqlR6eJfk+TyhomzrUNiHrW2YZQyM=,tag:kWA5vJgiUYVnvj7L/vHH0Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
