--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:6OX3wMH2,iv:UCrZvXE7fBtf6mUV87aQhYiZi/vmoAmTd/5omwaFqxg=,tag:xNJZzHo+SkahodOR3MJKzA==,type:str]
-ansible_user: ENC[AES256_GCM,data:wvSqCJQT,iv:tSupQnxDjmyVI9KDgoNp3ykEQyQrK5iJQ1alRaXlNSE=,tag:QGmHwfwywcjHiSB5oiTDEg==,type:str]
+kind: ENC[AES256_GCM,data:lnflRnO0,iv:4O0VP0NUUNutLn03Y7sHjuo2MhGnNwd9UbO3iK+TSNw=,tag:IjziVyHrhpjyrwMo4OesKg==,type:str]
+ansible_user: ENC[AES256_GCM,data:VPlRjgUA,iv:9KyMrRZsGAi4+GfbPQWkF6jmh+UiB7AIJy68+7Mi/Bo=,tag:acyPsVivBEbPqDMEMgyQsQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArN0hTWEhVanAzZnhaVWFw
-            Vy9Pd3o3RmNmcVRnSVJzQVVTVG8zR1F6T3o0CmUveFhYNk5WdWhyRjgyQ0E3RTUx
-            ZXpvTWlLN0lkRVgwV1pDMldvMlhXQWsKLS0tIHlhYWtobFVaM05aRWVDSnlYM0p5
-            ZVVQVnUweFNpU0pnMXJLQVdMNnlJRGMK8d/fXQK6wloZHOwXYaiCKLBUkzgQeUOZ
-            apF5+QK2lV9LNP90bg5dzZaDb1HVS6hhK2Hvt+nWZe0/rXbx1ztcIA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlQmpWeDRLUFFycmpzekM2
+            TjB2NlB3Y1E2S1V1SWVhNy9jTjYwUFVjTTFzClNBYTA0NmNkRFZvc2RiZnhCek9v
+            dTQyQytibWlzTHFZejIvZ1haL09rb2MKLS0tIFBjSUFFY0NtSUY3WHhubjM4dGtO
+            RlJnNnhQOVFjWHl0NEFWR0tLTitsSEUK+0oRLw/YzggXuY/W8dEIC4Mjv58mU6Rr
+            TSUFraARGlMFpHnJfl8ggBhm8bz4a4of1Gedjbg4JB+irMoatzkQ6A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T00:49:47Z"
-    mac: ENC[AES256_GCM,data:7wq3t+s2MOC1aoVsJCqZYIpGt4eQ8Oe76J+tARAMMrjqmtSdBTRE/0972SRdwmqJyytjVUE6P5JQJGkxAROxZwZwuRN0V/Rf0Wp1PTgTU7xIf1FjylfcBCsXZETTaGP2awyxyrPtfG79Rp+lSDgS4BBDkg8WgCD5qG3CRYQnATg=,iv:z6jY6oxs7rjrN+yHd+Hv7/O+HK8MhUiIei60RwJD1fM=,tag:a9g4pmV0ddUgcuQU+boMmQ==,type:str]
+    lastmodified: "2023-02-17T03:29:43Z"
+    mac: ENC[AES256_GCM,data:u+nj0rcHb9vPlv1FfOEvdrfePg+tyAjQmkL+skdVhEQ8Ot7mp8Hp3yVUbOkTiy36tX2S2UPTXp2IBZB3ThEx+u1+VfRZIpsQRGi3vsykNR22KrG1YuPzarsZ7dA6E6ypyLx/X8R0JG5gFTMgMRzqzisWtkBNNri5odcLUkXeiRM=,iv:5UMsS2X14pVkYUBUukl+0x8Y+M7t3snJBQPZrP/a0jA=,tag:U+lvZzEo6p/FETxUFyDocw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
