--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:zfK54EvO,iv:raqKcFoZBZQ41ZDZAqZa9pPw6M5yB1M+2LLN+3TjYIk=,tag:huKDVxIAbVHUqh2+3thHww==,type:str]
-ansible_user: ENC[AES256_GCM,data:DZ6B3QWn,iv:BWjaqMRCQK8XgmWww/Z/+IfCN7y9blAu0CcT4Oe5Zdc=,tag:QEsxSBZIuNHRNZkaZDvh1w==,type:str]
+kind: ENC[AES256_GCM,data:JT4x1++e,iv:brT487HppOnpGpTzg7pXTj2rASOBt7RmB+5af5JIYC4=,tag:czxGQQ2ZtFH89uuKzNY6VQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:o6ooeD2R,iv:QM87tDjvePaeDINDHjQmk7CV9Nq86wbpQf3WFBebYSA=,tag:jghZdrNkkcNtLUzfEoX2Sg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYSEtHMlRNaGhlcXNBM0dC
-            OXJuSW1JUE0rR0c2TlNuYlRDdWJpc1phRkRrCmtQQmk5SmxDS2h0OElWRjQvdy8r
-            VUxBcnBVOUtQeGtSaVMrTzJVTlVLNjQKLS0tIFQxNTQ2QVRGak5NeUJ2U1ZjRTB2
-            a25BeTdtWG5oYUNBNzUyZ2M4Smh3ZU0KSGYzj9Uh/zRhaM0BBZVGVEKGIecI/K+g
-            juvlN3AaWWnjH8g+gUq+mFABgVzXc/rMS+YwHBohn5aovkqJI+izCg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4OTVFWEdWTW9jbjFHN2Nu
+            czRIOFo4THlWMjhlaUhmU1ZoNXdxS01STldZCmtNemF0aFJtMUdpSytnOTBXWmNr
+            VDdHamQ0aE5KSHBodjNqTWQ1RDdCVm8KLS0tIGRQNGdLREFTdXd0cUhTaGF2SEJS
+            T0J2bEpYdjFPREd3UnQ0Z3RWUlRYZ2cKr/vAZHrOK79p0fwwCl8fRkulPR+m/LV4
+            ygJnYr5VrkFSca9ESbIBfRa/cHQFFQSFFrs3hc3lv4fxhT9lsTfXvg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T00:49:47Z"
-    mac: ENC[AES256_GCM,data:WtjYNW1q3JW1a8EUMlz+tWvg/6iUfca/jz29XmV4B5QW0ajsCH4Va8zhS11jVzyfo/9Ns8GF10ikVWotqZmoZcmpcN2Gua6nrD6pw7wi+KNYeGGVkGlAJx30bbBfVuXvn93mQByJ9cWHZvGzGbw3G4z0MHGedvPkyJYmBqU3N24=,iv:ana+mZcMFtKVIVhn5mpTBRuxUJ2Bi5ztXQWvODcB9II=,tag:kRYb07dUgIeWQmtz5u705A==,type:str]
+    lastmodified: "2023-02-17T03:29:43Z"
+    mac: ENC[AES256_GCM,data:AvwYojj592iL+NvxxcTq5ZYmuHMCMRghKUDEJxGJgGUGucvRsYmKwx1kRbF5bAKpxIKBO/H6tDncU/YiVftDcVC2KXRBYESZ+hyLQ5/+OUnKRVribVQ8dR4eYVV3JwpIuiolk+VfTQIoFNG33Uh6feauQQzub4I0Ybv0Mh+muBc=,iv:eDsRGFrSxnzXRf9p7ezNz3tVa+LjCdg+1rZ9YjNQx+o=,tag:LGYakhG9uF8i9K39aNuRXw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
