--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:vIbTVZ2U,iv:Efzlva2Q9V3dck4VmzmO9nMIM3IXxn9ZjBng5MJZNvo=,tag:vMIIxqoUSJWxMGVZmrPK/A==,type:str]
-ansible_user: ENC[AES256_GCM,data:+rulaFrb,iv:4YkrKx+CR4Z9rnd+u1OvgDq5S5QrutF9Va4yyrL3URw=,tag:algGKAfWYLLBy+DvDbrzBA==,type:str]
+kind: ENC[AES256_GCM,data:BHhLUs67,iv:ZJbM7OBObH9ElMikgbq5iHKS9B1Adlbe4MkT5rQm6ZQ=,tag:1CI+yN3ewfu82G5QX7oyYA==,type:str]
+ansible_user: ENC[AES256_GCM,data:dEGjyye+,iv:7A58+tgm2GifPnnwj5TrPEEHGPT6isWRGsRPSNntTRw=,tag:g9poVmHrbF2YJL1Pr8tY4w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSYmdLLzMrajVFbEJrcnFJ
-            WnhIc0RQOHoxcUFmeWtRZDU2ZG1lSmJ1cHdVCkMrNUpkRUdKcWV5RDlDc0p1YUN3
-            NUxUeGF5R1Y5aUNzeUR3a2pkTTd3SjAKLS0tIFFGWGRScGFrZ2ppMEZQa0srTEox
-            VnFTWmlDNkVFK0lhcU5SRmJEUStuZ2sKdu8KdWxiDC2kdgENKO4MI0GnlLgIhGtx
-            fb3bvy/3w+06VHitwnC2FvW1hE7xU3BwPvBJ5UbwAH5gxDRbb4iFzQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnWDgrK0V4dTVxTkREaG9l
+            L29aSW1oc3g4ZVpTbU95YnVNdkdENEFtQTE4CkVCV0tYWmRSVW03RFdHdG1qVXNS
+            NGJTMVd6YWl0VlhRbURZcVRZWFJzb3MKLS0tIEFaN3k1R20rZlJTQ1F1ZHBvK0hH
+            M3J6a2VMYTRBSnFZV1NYTmR5V2RtWEkK9lf1YTcITCHuI/kbCREBckOtDe294wc3
+            HA8QIs99OwjS4mW0bzDEpiDsVYlYdr2O8aVBe8hBGtOdLc6/FKGwDw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T00:49:47Z"
-    mac: ENC[AES256_GCM,data:0w4JQTuZgWen/imgwV++jyn+bpIurxlqPoZvNN7fbie1IO1PJaRiX1+TYDy29Yn3VjqoXKOgQO9W/EF8zcF9CK0YTyoU/HTO9rIzBhr+Xbke/wD0CVhI+KN1OCn1pIbNMKayNPdQuyc1Ssd/EYxLoCrlljjeQJI3uyp62yxPgn0=,iv:z2QvT8l/HQFcqxffPgHE66JvPN2YCwLWzXRF2C+bXwk=,tag:6WibcKk+4BOvnTRFdRd3ww==,type:str]
+    lastmodified: "2023-02-17T03:29:43Z"
+    mac: ENC[AES256_GCM,data:qjtWbDQvG4xcp4hp7nIZixq5jB3RZdouitROL6jd2KFahyvJFSKUcBYFEuP/CVKEEL438FUg0TFz7gc9YdZtPBlTSdZ8PA2Py5gk0EWfEdMPtrsOM/Q1Bp4tPPUocnhHLms2l16XzEJBE4zOExyWL2hgx66zbvquvMn0gnxR+s8=,iv:Te3n+vvajza5uRQnsHrWZVjRcD0ab8hJRIcyf7cAwn0=,tag:2WJK6z5quJr6x97fvKAa7A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
