--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:fQEv+iWSuCFUYu063aYe88iyUimc,iv:EsanLjMlOdRgyAYVVhi+dtiKdDKSHRkkGAwGcLKTQSE=,tag:TU3COwOEUe5P6Aijrt3ePQ==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:jhzaY9d0qsfiOydvcGeHJWdkdtiNjZAx3lzyS0lb6MVytCkU6g==,iv:gBibrdRb73hwykSFGdEk0eqkSaQUcDdyZd4g0euZa6A=,tag:8qEJaxOStDyO7xxL0opqew==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:DfnxSPeJ2/mQTds=,iv:BW+S0Ot94td9xBPpu4zEkmsPv94dtckwuQ7I7qcCGW4=,tag:+ibqhoifjYI4k0Ol3k9DNA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:QkQjw8OEZjYsgB1fCYfTaphsowGQ,iv:sMd2yHQUVEOl+QvIZYfNG8KC2qvSmLc39X80iFBgkWQ=,tag:AOtfX8Nq7SVRmE5Y/ExVSA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:b2SB6gb0o/bodQVPiG0psliTAtfTigftQK/HAOVi0pOWhuq7zA==,iv:Yqm+adBH1rXLNjeleFrWBtpIMFeoUg9Uf4o/4lMW1DY=,tag:LCFFGMj38GlxRdJxr2SHoQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:1UKD4bllXVvNYcI=,iv:X3moy9o73x2eJrFFV+tXgqnJBTgNPWUg67nemL9Sn1Y=,tag:2gc4Hh8lm0sQ26bBf0YZdQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRd1cwdDVLQURFTDdNTE5p
-            RGszK2N6S25BMm4wd0xweW9DNThPL1lCTEFrClY4a2psK0EwY1JLRHYyUHlwWVQy
-            NVVpVjc4TFA4WjVSekZoTXMzaVNGZTAKLS0tIE9SWlh0M0FHYU5hU2xzM1pmYURI
-            UGwxYmZ5ZWdpZTZObk1FekJYUTQvT3MKNyjFMJy3PjlIvsvuZ8KjVEK62DObj3KA
-            2t3npde86FZ7xZKVYPjx3NbUudS7YUs2hUZ2LSnjmqHgG+NNB3DZdg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvZHppY2gxMjVtQTY4KzND
+            Rm0wY0lCZW5mamNwZkk3YVNocVpsb2xOYkJrCmRkOVRKNGpIaWFEaTMzc2V6eFdS
+            SXlmSDV2dGlVcnYzY3cxT2JBVThuYlEKLS0tIFRmdzl6QmVKQ29NN3VBdkpLK2Vu
+            d25TSVp1SnNLNTJWUlRTcGhQLzUvemsKFRKrd+UrMS434t9kwm/w0LJQN7dC6EEd
+            wxErliXqbZ3/4p7WpVioPpA2ir3zxaJ+JcH6ncP750LEiTG1jnqA6A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T00:49:47Z"
-    mac: ENC[AES256_GCM,data:8Xx05D0UcXLSc36vH5vNwAx2dceu/shrRsAgc9dnu2fHNMsA43BUsQXTPS5eQVxpiyV8IvltSbuQifceMD5KSItES6a+U69VBPQ/xDwBQ/gab05qjO1TcC2/1WsuN/K/zMWz1SNFrqyVMeD9bGqun3CNArirxdnoBEgIWDg8tb8=,iv:hxl7kQihq8tb+Df0CEzeuyQOJHkZXjojojTq6+uoTUk=,tag:egITA73Vm48xJ/PVKQ8ccA==,type:str]
+    lastmodified: "2023-02-17T03:29:43Z"
+    mac: ENC[AES256_GCM,data:ywjyzCqQDXrZc+kBVBKY9rbnnnsNWxQU5GAaeY0TeoymELhaIG6q6+tj1wqLphYepW0I2JT5/ZlW3ty90QZo+dd3teIKvS+0fTqMFTHepi3lHQ8S7bhy9cb7fKYC7Odu13zHRcdojt6IOYuQtF2X4PrxF/J10v3BLToBFgnR9LE=,iv:3pGi7wmKVkFNLCpFYwh4lCoDEiiHPqJ+7FcRh3aj6u8=,tag:XPLlN2Ld81Zy+34KXNljNg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
