--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,27 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:qTizZUaPACSHUSU=,iv:JLUsjebSUooXsnvYCkSes2OxO7LTUUmy8VrCnEfIqek=,tag:In2NavLHpxKo4hu5E9VsZA==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:xvISDteKBwYbIAjN1rhNHDU3NKhE,iv:l9p7126NPNmSuDnl+xtLps5GoDc2QQwiPFoyYc8LBLc=,tag:zH601TJTUimpGKSDrvUTBQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:ooOlfgAaKkKl7MZyaO2FxeJc8XxmVcPMcfaFXzNAym62IlBxUM8urP8qopyM79FWkvsIcB4ImBwJ1z6PxQIZfEC6Akoqjks=,iv:lFM0GHKR3V55kYMLsIfgOO0/Q27DNedIfW3K0QeaP4s=,tag:Y7Xi8Ss0/Jad4qpIZZLSWQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:vdtVtEDomX4lC0s3IA0HDXz3yOFlzplaRlBx1lfyivT8cT0=,iv:ZJF6xqbG82PbGgwVlF/JjjTiHpkQBu2RCtsNGVkiCwc=,tag:GmqCln/qW5ocFEB/jfXl8A==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:dHNKeumW1hCHYr9wzSkeQoHxYQ==,iv:j/khhkSkjljZNtym/KYYjhR/Zx/kovFCkHBC2nuSlEI=,tag:cV4/cR/r55wLqCZYxt8kvg==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:em9dObYygUha/7YAA5z327qz8Qr5,iv:fbmG/GzKXv3cMxXp80w8dMJ74OJW0IJznyHJp8hEXyU=,tag:yhH97gZipXjxFoHUHxPFFg==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:12/tUwQvsQ4=,iv:TORNJRGI7faA4nP+dzn9qpYUhhd1uGAIT9fMgrVIn7w=,tag:gOWrHpf/BNqZS50XWhEMpg==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:H/q8vbENfgQ=,iv:hoGtBOGzASEtmSMC/BlIt+3kLJD7FK2zWLx1qeALqmI=,tag:tisWJSEyH4XZIBWgxQgZCw==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:sispy/vAD2ePpRcFHCR261vsXDhrZCENRLiZ60JdExOREXGQYtBfXRnoLXD3BxufcoXhZyLlDFcZ7kyapBzg2Q==,iv:Bse+7Du63iZSkXIRF7Gj5IqG8MdbevjJHdy+JiR8hAA=,tag:XwYUvpBBnsKI4ojsJbhKIw==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:1bDs81JCGS5KkeYTwlPK1CijWfDEBz2ZRJNn5ja4nUdT0y3Y3c6q5x3BgF36aDp+eAdo+U25Q1daKmABzDNq+w==,iv:2QkttqG4j1hqLMI23vXxQxuV0fAkfks909NONNoBnno=,tag:VfkqFEa0cClDs9XMwEVcgw==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:MKlIeMEs2Lfo,iv:IUVw4srKFX+Gr+R4O521FoSN9gkPLkF6EGP02qls2Vg=,tag:93za6g8T7fbcjB+TBdfQjQ==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:WeNu73qAikonrmmxSjVk,iv:Lu76vhqyYNeR5vG36LQR9xo/cE/LDa9H1K1AE+eGqlk=,tag:1kzg3qoRib5ntjAveT+6sg==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:pZuSDJcBCP80QYZeR6PDMYc5rzpEUcAdDKMjOQoD/V5Czca9Rg0XtbPQorLH0Zdxl8Y=,iv:SkLCVzGwkbFOutwpixtjsGdOk3q1Vk4LbkgUB8oxZUo=,tag:3o8tx2yk5DrnkZCfEaYd1w==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:d//QGFmbb0d+oVB95tw=,iv:ZHAmIDGD1Q+KkBdAmu6NtgQ2Fgs2B0QEW0UmQmYir0k=,tag:M47vGI6WsVAeOTbxd2PAeA==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:ubsTr2GXMW1VpRSXqJ1S9Wmp87A=,iv:Cs5OLyEyVUyghd7KbC/yWQpadU5TISrPuw+4Oe4u+wY=,tag:Aos9sfqXorco8bQ8yCpSEA==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:xVJEWEAsbqU=,iv:JhdFaGHeFCEJx4fVecKrj29haIAs/WU/BmYFXaSrHm8=,tag:ZAK/CsTaiUK6s4zA/UKBFQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:3Sh9/tf53MgHYYab6XN2zsVzydTTKoUHrO7VivLCQAngnYZIUzc=,iv:mllIiUx6HCwFDaWoxask/pw7KmA5mdPc08JdfUUCfAA=,tag:KBJkzuLJ2gnLFNqs5+f0Cw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:agz/mDINMf0=,iv:pAPXfcN7SgNgRLt8g8+vYPeDx2nGkkQ5aeR1skKyCLk=,tag:8026pe1wDNIv17zagGjTTA==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:6Lr78b+bxGtD,iv:xyDojx6M2ogVpxDWEIWAbnJLYRhVna/pwDr5Q8tMk48=,tag:KzJdwM4bLjm0RvyPIB6vQQ==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:8sP2mR31dA==,iv:5Bboh+U/1u8Y3Bt1++bi/WMn5txca82s63Rlg6PRZl4=,tag:x0OaKbGYzUvFpbbrLYglvA==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:CxGhqMVFcDHI,iv:HAZqK3YW6hBIjUmEWToleNybv5CrDaId6SJn1wSLR70=,tag:hYNQkwQB2l8fQD8EL8giHg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:v6MZwxDFl7EKUI0=,iv:uIvurOgHnPmrQV76m6cdl/bc/qy53FLm5VoO+YP5Vb4=,tag:dUoZn6dwxqGIrto1oN7XCg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:2U8oNyraEiKCU6jpFSGCT08ZHspt,iv:OCHjFOctfibFnE9wZNHKaUhGKeecLG4ZUMgmpbCtUB0=,tag:LLsbuqKiHos2vTaTZe5hDg==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:cY23KMEPcF0nIGdWYXXxKNw+py8/DJFhbtlioLR3gFa1EQaGa44yXVB0aTXwN1Xj/JZbyPQzb3awJQqlXjWE0iCaPJLHyQY=,iv:JsagohCp7j2YMNXfm5N34RMJIQlBDOVByair3+KrbZA=,tag:g2wHQsAAxB579GSzQ8WwaQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:SjgbQyHdqnDXKAUOMrNney3x0NAPoLzLAdGh5Exyrb4JiZA=,iv:ozyCVZXiabw6Hw8TNgIBw088hnitGGXBHjauUh7Ecj8=,tag:UlinsCwmzbgr9oV9xfBu8g==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:eCptj8Y0EIOdw7PKobnjU0Wb/Q==,iv:VXzo9jQNsyA9z9M3L58rxtJxJN6HZnZoZYOgvTQltQs=,tag:uXU1NLcUNyl2DaWvwFHaXQ==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:vlNaPjzpwV/ZrE4tfMDL9bEK/S7r,iv:fOj94PsvhYVPSHBpTo6gpfGQhDemRmDKQgkXp4cCDn0=,tag:LpMbRAeQ36P4KWX7AvMxaQ==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:ZekwntQn5uI=,iv:OvR4tpsWv76rNN9FM9wV8YXLz1ax9Ki3V4leazPrJEg=,tag:Fz6ll86cew6Y+4rpDzPOYQ==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:DUpqNL8qYNE=,iv:CVYPTh1eCobD0+tN6gZ8yrkCEPCLRMiAugXRnjabF/g=,tag:ypn/bQ+eIYhjV0OJe0GH7A==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:pjeY2gEps/Gy7GgE4GcC9SpbOH7cTUnGutdr8TdnLGyMLKYvnOHTeWVTff2g03PqcoZIbmfqUT6d7UY760ORCg==,iv:sR9LHWJoG0jEB3OKwhLvQcF+hzZF3eSQcUmBG0QcMV8=,tag:AiMivkSIxuddMdfvK7IFOw==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:2uIGSoyo+vPqOEePe1hSzVoYIreNoe83C2OLaU7D1MQgejwy+CQ5/8htSzXImFE3JAugYL2AuEYenTZMySA7MQ==,iv:n2awlcqLK1kA1eLCu+2DnyyE0ZngRiLNGi7e8UbUTDU=,tag:/A1Ku8WqfuX6U9E6vA7JMg==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:UKuogOoxxC6g,iv:+8XeRtylejz8jpR84oRi6TYG9FmG6buQT9GOdkuGCEc=,tag:4Ne+fIth+G3YsWD/fcIIPw==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:0tOghG3n/THMyXLmvGmS,iv:0Xp6AnIV09YhJgEDVGooQlMBxnedTPkCPIfsSz2bD64=,tag:i4cjXjHfLhWA3h/wlcmkWA==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:J/yxBGGhasPE2bt1yB/tzgUiK38XebPOvFUdLMZEQLE43VdA0NP2pVd1dsoxSJBrLfY=,iv:IBEL0mAcBjiapePb6dzyAXIA5+lUX0+O1wAeRGPKTH0=,tag:m/KqMwnTc1do96jjXrSRZw==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:EjXuYc4//pbXJlgeI8U=,iv:z4YVAifoRmo1xvj6qqs86gjA6veYUas2Y9vrWX2zo5Y=,tag:lcA70iNd8dizMOoRC4+XqQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:jeM4DdWLxmrCwEKC8LYhYj70THs=,iv:IeATMy+6pvRAzOjMuJODnrNJR2DOzMvV5gDIP5/e0n0=,tag:KZH+7g9JvNAxYJfakWGobg==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:RTkLrti0qiY=,iv:RxX/7mIzTMBIndn7KEYOXak+Hx76ebSbykcIHtwePIw=,tag:IXJHAkvw5rnyqDVz8KQdHg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:1ux3R0IyMCSOpx/8,iv:BGL/UTTGA3y5fzBQ/oKZKPTd/Q3r2/m6svq+tWK+d7o=,tag:If8bu0M3RdEw2LF/d4Zspg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:gzL2uhKOyRsr,iv:yMdJFsyvb5L/rxz3Wy5t7WY86tGQODcB9aE9PE4fcQA=,tag:vSvkoDqwrmZMs4SltMkcQw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:xMLm0iI1ni9m,iv:fnrqJevB7uIsgzkhgJlxkRC2ul7DpyHV5dtmw8l0gA0=,tag:4e28VOgPummX7n221iFi4A==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:EcajLy1dEA==,iv:uyv5vBW/UkAhMiLRhMSjJn8u0LaY1HeUAKmJGvLQL3M=,tag:DT2gXMtHqxl35uyfLbixuQ==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Ex/k+YrSaDSG,iv:pZwfUJIUMA8+9uiD8Zy7FcYkCeddTXBUGmgyCSD4C10=,tag:F20v7+u58d5/fjO2X06/vQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +34,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHUVk4TXJGVm96ZGFwZlBu
-            MUJKWFVMMHIwVC9ySFQyUnk5dzRKdzNYUWhvCklCb1BHMjFFbjNiV1BQTGUrc2ZD
-            QXBYQjdETFhLdDRNZEREb1g1NnV3LzgKLS0tIHFTR0pVamtoREQzZXVtQnlTOHVU
-            MVlYMlZFajBsOWFMOHRkMmhmUVg2SmcKtSRFPwnkh/Bu9epoQWAoyp/Cn4mmSaeD
-            OFgZoXZJ/W5ZJvYlbeJ1cri4kUUK2MQTbTjpSpFmb4Z6Yp7U4gfl9A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSb3lDUy9WM05WRCt2VllC
+            Y3JsOWlBNXVMTmlPekZRNHBYdHdVYjd1dm5zClRoRGZzYXowR0I5eElOSlFINWhs
+            WHRWRDFDazhSL3Q2SUZlSXBhQ2tzRGMKLS0tIGhrUnUxWVE1b0tLelMrRjhFZUVv
+            UUlVR0dDNllhT1Q4SjZJRjlmSDV3bncK449H/duSBexPw+Z/vyes6Cje69VdYMsa
+            XL0p2HlCwuO2aRLvKbkLhvjD+OoFbhJylLSrKi7T/XXYo+FcdoD/8Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-17T00:49:47Z"
-    mac: ENC[AES256_GCM,data:n791qY8qO7wjuGFZEli1kh9ex34IW1loQBdDkWO4hIqfGobYzI8ne1JijZRKY2nRCcM5aY52rLE3OQoBmvwaqlX35riINc8jiStJY7CPfcO6O9Yha3VWyl1MWDTi4sc+4xdAqspajKy9PUHsNI4Yrd4ir5rxnXrQIbe1wmP1w04=,iv:Ti3SQCkzfT4wwasxwKwfoM2EyBcnV6BOjMq7727Jcg4=,tag:hN4n75CkYJQHm6QOlHUy3w==,type:str]
+    lastmodified: "2023-02-17T03:29:43Z"
+    mac: ENC[AES256_GCM,data:irfhFKedXiBi86y6Ugvtv/McAh0E8MAfzXkusuovulzpkTXSYqU99U067R+Vh3+mwxOiX0wxg0yzIVvkNU7gN7NkEeUPsqlU3IUTUC95MHNexkIsc5p58Q9ZnwBTXSpVsBvdS0ARyOZPbCms93isqMqaWlb5AbDT11eijWM43AI=,iv:Gg/TQaO5w7Tx9x5HBHR3za1FYnx00BAJXrdk//R5LcU=,tag:scFixsgMc29joL4rVR40Cg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
